@@ -8,7 +8,6 @@
 #pragma std_c99
 #endif
 
-#if 0
 short int i = -1;
 const char * const wordlist[207];
 
@@ -18,15 +17,12 @@ foo(void)
   register const char * const *wordptr = &wordlist[207u + i];
   return wordptr;
 }
-#endif
 
 void
 testTortureExecute (void)
 {
-#if 0
   if (foo() != &wordlist[206])
     ASSERT (0);
   return;
-#endif
 }
 
